manifest/2_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blue-green-app-deployment
  namespace: examples
  labels:
    name: blue-green-app
  # Buenas practicas
  annotations:
    kubernetes.io/change-cause: "Aqui va la razon por la cual se hizo el cambio"
spec:
  #replicas: 1
  # para levantar nuevas versiones sin dejar down time
  # Ej: va ir de dos en dos para actualizar todos los pods
  # por defecto siempre esta en 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0

  selector:
    matchLabels:
      app: blue-green-app
  template:
    metadata:
      labels:
        app: blue-green-app
    spec:
      containers:
        - name: blue-green-app
          image: codeparce/blue-green-app:blue
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          # limitar recursos para cada pod
          resources:
            requests:
              cpu: "5m"
              memory: "20Mi"
            limits:
              cpu: "7m"
              memory: "30Mi"
          # Verficiar el servicio
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
          # Listo para recibir trafico
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 2
