manifest/5.1_ingress_ngnix.yml
## Depreacdo, pero muy usado en produccion
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blue-green-app-ingress
  namespace: examples
  annotations:
    # para certificados auto generados
    cert-manager.io/cluster-issuer: letsencrypt-staging
    nginx.ingress.kubernetes.io/ssl-redirect: "true" 
spec:
  ingressClassName: nginx
  rules:
  - host: blue-green-app.lab
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: blue-green-app-svc
            port:
              number: 80
  tls: 
  - hosts:
    - blue-green-app.lab
    secretName: blue-green-app-tls
