manifest/5_ingress_traefik.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: "blue-green-app-ingress" 
  namespace: examples
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    # para certificados auto generados
    # cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`blue-green-app.lab`)
      observability:
        accessLogs: true
        metrics: true
        tracing: true
      kind: Rule
      services:
        - name: blue-green-app-svc
          port: 80

  # tls:
  #   domains:
  #   - main: blue-green-app.lab
  #   secretName: blue-green-app-tls
